[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/art/enemies/armstrong sheet.png" type="Texture" id=1]
[ext_resource path="res://src/Actor/Enemies/Armstrong/ArmstrongSM.gd" type="Script" id=2]
[ext_resource path="res://src/Actor/Enemies/Armstrong/Armstrong.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7, 8 )

[sub_resource type="Animation" id=2]
resource_name = "die"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.2, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 6, -5 ), Vector2( 16, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 90.0 ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.6 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=3]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=4]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 2, 3 ]
}

[sub_resource type="Animation" id=5]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[node name="Armstrong" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 56
script = ExtResource( 3 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
self_modulate = Color( 1, 1, 1, 0.981842 )
position = Vector2( 0, -2 )
texture = ExtResource( 1 )
hframes = 4
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="DetectorLeft" type="RayCast2D" parent="."]
visible = false
position = Vector2( -7, 0 )
enabled = true
cast_to = Vector2( 0, 12 )
collision_mask = 48
collide_with_areas = true

[node name="DetectorRight" type="RayCast2D" parent="."]
visible = false
position = Vector2( 7, 0 )
enabled = true
cast_to = Vector2( 0, 12 )
collision_mask = 48
collide_with_areas = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "wait"
anims/die = SubResource( 2 )
anims/idle = SubResource( 3 )
anims/run = SubResource( 4 )
anims/wait = SubResource( 5 )
